# CountingSortHPC

./: README.md
CUDA/: AssignmentCUDA.ipynb  counting_sort_global.cu  counting_sort_maxminShared.cu  counting_sort_streamed.cu  counting_sort_texture.cu
MPI/: CMakeLists.txt  Pipfile  README.md
MPI/include/: utils.h  utils.h.gch
MPI/measures/: extract.py  measures.bash
MPI/src/: init_vector.c  main_counting.c  main_seq.c  utils.c
MPI/test/: test.c
OpenMP/: CMakeLists.txt  README.md  commonAssignment.gplot
OpenMP/include/: countingsort.h
OpenMP/measures/: extract.py  measures.bash
OpenMP/src/: countingsort.c  main.c
OpenMP/test/: test.c
